--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 .App {
   text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ .regiform {
+  width: 100%;
+  align-items: center;
+   justify-content: center;
+   top: 50%;
+   left: 50%;
+   position:absolute;
+   transform: translate(-50%, -50%);
 }
 
 .App-header {
@@ -24,15 +24,3 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
